# eCTF20

./: .bettercodehub.yml  .clang-format  .gitignore  .gitmodules  .project  Jenkinsfile  README.md  Vagrantfile  devserver.md  getting_started.md  index.js  now.json  package.json  pcbs.sh
.githooks/: pre-commit
Cora-Z7-07S/: pcbs.sh
Tools/: pcbs.sh
boot-image/: template.bif
docs/: README.md
files/: boot.bif  registers_init.int
mb/: .gitignore  CMakeLists.txt  system_wrapper.hdf
mb/Cora-Z7-07S/: ps7_init.c  ps7_init.html  ps7_init_gpl.c  ps7_init_gpl.h  system.hdf  system_wrapper.bit  system_wrapper.mmi
mb/drm_audio_fw/: .cproject  README.md
mb/drm_audio_fw/Debug/: Makefile  crypter.c  main.i  main.s  makefile  monocypher.i  monocypher.s  platform.i  platform.s  strings.txt  util.i  util.s
mb/drm_audio_fw/Debug/src/: .main.d.swp  subdir.mk
mb/drm_audio_fw/Release/: main.i  makefile  objects.mk  platform.i  sources.mk
mb/drm_audio_fw/Release/src/: subdir.mk
mb/drm_audio_fw/src/: constants.h  crypter.c  drm.c  drm.h  lscript.ld  main.c  platform.c  secrets.h  util.c  util.h
mb/drm_audio_fw/src/include/: sodium.h
mb/drm_audio_fw/src/include/sodium/: crypto_aead_aes256gcm.h  crypto_aead_chacha20poly1305.h  crypto_aead_xchacha20poly1305.h  crypto_auth.h  crypto_auth_hmacsha256.h  crypto_auth_hmacsha512.h  crypto_auth_hmacsha512256.h  crypto_box.h  crypto_box_curve25519xchacha20poly1305.h  crypto_box_curve25519xsalsa20poly1305.h  crypto_core_ed25519.h  crypto_core_hchacha20.h  crypto_core_hsalsa20.h  crypto_core_ristretto255.h  crypto_core_salsa20.h  crypto_core_salsa2012.h  crypto_core_salsa208.h  crypto_generichash.h  crypto_generichash_blake2b.h  crypto_hash.h  crypto_hash_sha256.h  crypto_hash_sha512.h  crypto_kdf.h  crypto_kdf_blake2b.h  crypto_kx.h  crypto_onetimeauth.h  crypto_onetimeauth_poly1305.h  crypto_pwhash.h  crypto_pwhash_argon2i.h  crypto_pwhash_argon2id.h  crypto_pwhash_scryptsalsa208sha256.h  crypto_scalarmult.h  crypto_scalarmult_curve25519.h  crypto_scalarmult_ed25519.h  crypto_scalarmult_ristretto255.h  crypto_secretbox.h  crypto_secretbox_xchacha20poly1305.h  crypto_secretbox_xsalsa20poly1305.h  crypto_secretstream_xchacha20poly1305.h  crypto_shorthash.h  (+17 more)
mb/drm_audio_fw/src/legacy/: constants.h  main.c
mb/drm_audio_fw/src/lib/: libsodium.la
mb/drm_audio_fw/src/lib/pkgconfig/: libsodium.pc
mb/drm_audio_fw/src/old/: constants.h.old  drm.c.old  drm.h.old  main.c.old
mb/drm_audio_fw_bsp/: Makefile  system.mss
mb/drm_audio_fw_bsp/microblaze_0/include/: _profile_timer_hw.h  fsl.h  microblaze_exceptions_i.h  microblaze_interrupts_i.h  profile.h  pvr.h  xaxidma_bd.h  xaxidma_bdring.h  xaxidma_hw.h  xdebug.h  xemacps_bd.h  xgpio.h  xgpio_l.h  xgpiops.h  xgpiops_hw.h  xil_cache.h  xil_exception.h  xil_macroback.h  xil_mem.h  xil_types.h  xintc.h  xintc_l.h  xio.h  xparameters.h  xsdps.h  xsdps_hw.h  xspips.h  xspips_hw.h  xstatus.h  xuartps.h  xusbps.h  xusbps_hw.h
mb/drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/: xaxidma.c  xaxidma.h  xaxidma_bd.c  xaxidma_bdring.c  xaxidma_g.c  xaxidma_hw.h  xaxidma_porting_guide.h  xaxidma_selftest.c  xaxidma_sinit.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/birdwtch_iface_v1_0/src/: birdwtch_iface.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/bram_v4_2/src/: xbram.c  xbram.h  xbram_g.c  xbram_hw.h  xbram_intr.c  xbram_selftest.c  xbram_sinit.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/clk_wiz_v1_2/src/: xclk_wiz_g.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/cpu_v2_6/src/: fsl.h  xio.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/: xemacps.c  xemacps.h  xemacps_bdring.c  xemacps_bdring.h  xemacps_control.c  xemacps_g.c  xemacps_hw.c  xemacps_hw.h  xemacps_intr.c  xemacps_sinit.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/gpio_v4_3/src/: xgpio.c  xgpio_extra.c  xgpio_g.c  xgpio_i.h  xgpio_intr.c  xgpio_selftest.c  xgpio_sinit.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/gpiops_v3_3/src/: xgpiops.c  xgpiops_g.c  xgpiops_hw.c  xgpiops_hw.h  xgpiops_intr.c  xgpiops_selftest.c  xgpiops_sinit.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/: xiicps.c  xiicps.h  xiicps_g.c  xiicps_hw.c  xiicps_hw.h  xiicps_intr.c  xiicps_master.c  xiicps_options.c  xiicps_selftest.c  xiicps_sinit.c  xiicps_slave.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/intc_v3_7/src/: xintc.c  xintc_g.c  xintc_i.h  xintc_intr.c  xintc_l.c  xintc_options.c  xintc_selftest.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/sdps_v3_3/src/: xsdps.c  xsdps.h  xsdps_g.c  xsdps_hw.h  xsdps_options.c  xsdps_sinit.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/spips_v3_0/src/: xspips.c  xspips.h  xspips_g.c  xspips_hw.c  xspips_hw.h  xspips_options.c  xspips_selftest.c  xspips_sinit.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/: _exit.c  bspconfig.h  errno.c  fcntl.c  inbyte.c  mb_interface.h  microblaze_exception_handler.c  microblaze_exceptions_g.h  microblaze_interrupt_handler.c  microblaze_interrupts_g.c  microblaze_sleep.c  microblaze_sleep.h  outbyte.c  print.c  pvr.c  sleep.h  xbasic_types.h  xdebug.h  xenv.h  xenv_standalone.h  xil_assert.c  xil_assert.h  xil_cache.c  xil_cache.h  xil_cache_vxworks.h  xil_exception.c  xil_hal.h  xil_io.c  xil_io.h  xil_mem.c  xil_misc_psreset_api.c  xil_misc_psreset_api.h  xil_printf.c  xil_printf.h  xil_testcache.c  xil_testcache.h  xil_testio.c  xil_testio.h  xil_testmem.c  xil_testmem.h  (+3 more)
mb/drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/profile/: _profile_clean.c  _profile_init.c  _profile_timer_hw.c  mblaze_nt_types.h  profile_cg.c  profile_config.h  profile_hist.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/uartps_v3_5/src/: xuartps.c  xuartps.h  xuartps_g.c  xuartps_hw.c  xuartps_hw.h  xuartps_intr.c  xuartps_options.c  xuartps_selftest.c  xuartps_sinit.c
mb/drm_audio_fw_bsp/microblaze_0/libsrc/usbps_v2_4/src/: xusbps.c  xusbps.h  xusbps_endpoint.c  xusbps_endpoint.h  xusbps_g.c  xusbps_hw.c  xusbps_hw.h  xusbps_intr.c  xusbps_sinit.c
mb/miPod/src/: main.c  miPod.h
mb/test/: .project  system.hdf  system_wrapper.bit  system_wrapper.mmi
tools/: hi  (+64 more)
(+4090 files in other folders)
