cmake_minimum_required(VERSION 3.14)
project(mb C)

set(CMAKE_C_STANDARD 11)

include_directories(Cora-Z7-07S)
include_directories(Cora-Z7-07S/drivers/birdwtch_iface_v1_0/src)
include_directories(Cora-Z7-07S/drivers/PWM_v1_0/src)
include_directories(drm_audio_fw/src)
include_directories(drm_audio_fw_bsp/microblaze_0/include)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/birdwtch_iface_v1_0/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/bram_v4_2/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/clk_wiz_v1_2/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/cpu_v2_6/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/gpio_v4_3/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/gpiops_v3_3/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/intc_v3_7/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/PWM_v1_0/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/sdps_v3_3/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/spips_v3_0/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/profile)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/uartps_v3_5/src)
include_directories(drm_audio_fw_bsp/microblaze_0/libsrc/usbps_v2_4/src)
include_directories(miPod/src)
include_directories(test)
include_directories(test/drivers/PWM_v1_0/src)

add_executable(mb
        Cora-Z7-07S/drivers/birdwtch_iface_v1_0/src/birdwtch_iface.c
        Cora-Z7-07S/drivers/birdwtch_iface_v1_0/src/birdwtch_iface.h
        Cora-Z7-07S/drivers/birdwtch_iface_v1_0/src/birdwtch_iface_selftest.c
        Cora-Z7-07S/drivers/PWM_v1_0/src/PWM.c
        Cora-Z7-07S/drivers/PWM_v1_0/src/PWM.h
        Cora-Z7-07S/drivers/PWM_v1_0/src/PWM_selftest.c
        Cora-Z7-07S/ps7_init.c
        Cora-Z7-07S/ps7_init.h
        Cora-Z7-07S/ps7_init_gpl.c
        Cora-Z7-07S/ps7_init_gpl.h
        drm_audio_fw/Debug/main.i
        drm_audio_fw/Debug/platform.i
        drm_audio_fw/Debug/util.i
        drm_audio_fw/Release/main.i
        drm_audio_fw/Release/platform.i
        drm_audio_fw/Release/util.i
        drm_audio_fw/src/drm.c
        drm_audio_fw/src/drm.h
        drm_audio_fw/src/monocypher.c
        drm_audio_fw/src/monocypher.h
        drm_audio_fw/src/platform.c
        drm_audio_fw/src/platform.h
        drm_audio_fw/src/platform_config.h
        drm_audio_fw/src/secrets.h
        drm_audio_fw/src/util.c
        drm_audio_fw/src/util.h
        drm_audio_fw_bsp/microblaze_0/include/_profile_timer_hw.h
        drm_audio_fw_bsp/microblaze_0/include/birdwtch_iface.h
        drm_audio_fw_bsp/microblaze_0/include/bspconfig.h
        drm_audio_fw_bsp/microblaze_0/include/fsl.h
        drm_audio_fw_bsp/microblaze_0/include/mb_interface.h
        drm_audio_fw_bsp/microblaze_0/include/mblaze_nt_types.h
        drm_audio_fw_bsp/microblaze_0/include/microblaze_exceptions_g.h
        drm_audio_fw_bsp/microblaze_0/include/microblaze_exceptions_i.h
        drm_audio_fw_bsp/microblaze_0/include/microblaze_interrupts_i.h
        drm_audio_fw_bsp/microblaze_0/include/microblaze_sleep.h
        drm_audio_fw_bsp/microblaze_0/include/profile.h
        drm_audio_fw_bsp/microblaze_0/include/pvr.h
        drm_audio_fw_bsp/microblaze_0/include/PWM.h
        drm_audio_fw_bsp/microblaze_0/include/sleep.h
        drm_audio_fw_bsp/microblaze_0/include/xaxidma.h
        drm_audio_fw_bsp/microblaze_0/include/xaxidma_bd.h
        drm_audio_fw_bsp/microblaze_0/include/xaxidma_bdring.h
        drm_audio_fw_bsp/microblaze_0/include/xaxidma_hw.h
        drm_audio_fw_bsp/microblaze_0/include/xaxidma_porting_guide.h
        drm_audio_fw_bsp/microblaze_0/include/xbasic_types.h
        drm_audio_fw_bsp/microblaze_0/include/xbram.h
        drm_audio_fw_bsp/microblaze_0/include/xbram_hw.h
        drm_audio_fw_bsp/microblaze_0/include/xclk_wiz.h
        drm_audio_fw_bsp/microblaze_0/include/xclk_wiz_hw.h
        drm_audio_fw_bsp/microblaze_0/include/xdebug.h
        drm_audio_fw_bsp/microblaze_0/include/xemacps.h
        drm_audio_fw_bsp/microblaze_0/include/xemacps_bd.h
        drm_audio_fw_bsp/microblaze_0/include/xemacps_bdring.h
        drm_audio_fw_bsp/microblaze_0/include/xemacps_hw.h
        drm_audio_fw_bsp/microblaze_0/include/xenv.h
        drm_audio_fw_bsp/microblaze_0/include/xenv_standalone.h
        drm_audio_fw_bsp/microblaze_0/include/xgpio.h
        drm_audio_fw_bsp/microblaze_0/include/xgpio_l.h
        drm_audio_fw_bsp/microblaze_0/include/xgpiops.h
        drm_audio_fw_bsp/microblaze_0/include/xgpiops_hw.h
        drm_audio_fw_bsp/microblaze_0/include/xiicps.h
        drm_audio_fw_bsp/microblaze_0/include/xiicps_hw.h
        drm_audio_fw_bsp/microblaze_0/include/xil_assert.h
        drm_audio_fw_bsp/microblaze_0/include/xil_cache.h
        drm_audio_fw_bsp/microblaze_0/include/xil_cache_vxworks.h
        drm_audio_fw_bsp/microblaze_0/include/xil_exception.h
        drm_audio_fw_bsp/microblaze_0/include/xil_hal.h
        drm_audio_fw_bsp/microblaze_0/include/xil_io.h
        drm_audio_fw_bsp/microblaze_0/include/xil_macroback.h
        drm_audio_fw_bsp/microblaze_0/include/xil_mem.h
        drm_audio_fw_bsp/microblaze_0/include/xil_misc_psreset_api.h
        drm_audio_fw_bsp/microblaze_0/include/xil_printf.h
        drm_audio_fw_bsp/microblaze_0/include/xil_testcache.h
        drm_audio_fw_bsp/microblaze_0/include/xil_testio.h
        drm_audio_fw_bsp/microblaze_0/include/xil_testmem.h
        drm_audio_fw_bsp/microblaze_0/include/xil_types.h
        drm_audio_fw_bsp/microblaze_0/include/xintc.h
        drm_audio_fw_bsp/microblaze_0/include/xintc_i.h
        drm_audio_fw_bsp/microblaze_0/include/xintc_l.h
        drm_audio_fw_bsp/microblaze_0/include/xio.h
        drm_audio_fw_bsp/microblaze_0/include/xparameters.h
        drm_audio_fw_bsp/microblaze_0/include/xplatform_info.h
        drm_audio_fw_bsp/microblaze_0/include/xsdps.h
        drm_audio_fw_bsp/microblaze_0/include/xsdps_hw.h
        drm_audio_fw_bsp/microblaze_0/include/xspips.h
        drm_audio_fw_bsp/microblaze_0/include/xspips_hw.h
        drm_audio_fw_bsp/microblaze_0/include/xstatus.h
        drm_audio_fw_bsp/microblaze_0/include/xuartps.h
        drm_audio_fw_bsp/microblaze_0/include/xuartps_hw.h
        drm_audio_fw_bsp/microblaze_0/include/xusbps.h
        drm_audio_fw_bsp/microblaze_0/include/xusbps_endpoint.h
        drm_audio_fw_bsp/microblaze_0/include/xusbps_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xaxidma.c
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xaxidma.h
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xaxidma_bd.c
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xaxidma_bd.h
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xaxidma_bdring.c
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xaxidma_bdring.h
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xaxidma_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xaxidma_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xaxidma_porting_guide.h
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xaxidma_selftest.c
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xaxidma_sinit.c
        drm_audio_fw_bsp/microblaze_0/libsrc/axidma_v9_5/src/xdebug.h
        drm_audio_fw_bsp/microblaze_0/libsrc/birdwtch_iface_v1_0/src/birdwtch_iface.c
        drm_audio_fw_bsp/microblaze_0/libsrc/birdwtch_iface_v1_0/src/birdwtch_iface.h
        drm_audio_fw_bsp/microblaze_0/libsrc/birdwtch_iface_v1_0/src/birdwtch_iface_selftest.c
        drm_audio_fw_bsp/microblaze_0/libsrc/bram_v4_2/src/xbram.c
        drm_audio_fw_bsp/microblaze_0/libsrc/bram_v4_2/src/xbram.h
        drm_audio_fw_bsp/microblaze_0/libsrc/bram_v4_2/src/xbram_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/bram_v4_2/src/xbram_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/bram_v4_2/src/xbram_intr.c
        drm_audio_fw_bsp/microblaze_0/libsrc/bram_v4_2/src/xbram_selftest.c
        drm_audio_fw_bsp/microblaze_0/libsrc/bram_v4_2/src/xbram_sinit.c
        drm_audio_fw_bsp/microblaze_0/libsrc/clk_wiz_v1_2/src/xclk_wiz.c
        drm_audio_fw_bsp/microblaze_0/libsrc/clk_wiz_v1_2/src/xclk_wiz.h
        drm_audio_fw_bsp/microblaze_0/libsrc/clk_wiz_v1_2/src/xclk_wiz_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/clk_wiz_v1_2/src/xclk_wiz_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/clk_wiz_v1_2/src/xclk_wiz_intr.c
        drm_audio_fw_bsp/microblaze_0/libsrc/clk_wiz_v1_2/src/xclk_wiz_sinit.c
        drm_audio_fw_bsp/microblaze_0/libsrc/cpu_v2_6/src/fsl.h
        drm_audio_fw_bsp/microblaze_0/libsrc/cpu_v2_6/src/xio.c
        drm_audio_fw_bsp/microblaze_0/libsrc/cpu_v2_6/src/xio.h
        drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/xemacps.c
        drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/xemacps.h
        drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/xemacps_bd.h
        drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/xemacps_bdring.c
        drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/xemacps_bdring.h
        drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/xemacps_control.c
        drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/xemacps_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/xemacps_hw.c
        drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/xemacps_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/xemacps_intr.c
        drm_audio_fw_bsp/microblaze_0/libsrc/emacps_v3_6/src/xemacps_sinit.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpio_v4_3/src/xgpio.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpio_v4_3/src/xgpio.h
        drm_audio_fw_bsp/microblaze_0/libsrc/gpio_v4_3/src/xgpio_extra.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpio_v4_3/src/xgpio_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpio_v4_3/src/xgpio_i.h
        drm_audio_fw_bsp/microblaze_0/libsrc/gpio_v4_3/src/xgpio_intr.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpio_v4_3/src/xgpio_l.h
        drm_audio_fw_bsp/microblaze_0/libsrc/gpio_v4_3/src/xgpio_selftest.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpio_v4_3/src/xgpio_sinit.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpiops_v3_3/src/xgpiops.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpiops_v3_3/src/xgpiops.h
        drm_audio_fw_bsp/microblaze_0/libsrc/gpiops_v3_3/src/xgpiops_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpiops_v3_3/src/xgpiops_hw.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpiops_v3_3/src/xgpiops_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/gpiops_v3_3/src/xgpiops_intr.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpiops_v3_3/src/xgpiops_selftest.c
        drm_audio_fw_bsp/microblaze_0/libsrc/gpiops_v3_3/src/xgpiops_sinit.c
        drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/xiicps.c
        drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/xiicps.h
        drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/xiicps_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/xiicps_hw.c
        drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/xiicps_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/xiicps_intr.c
        drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/xiicps_master.c
        drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/xiicps_options.c
        drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/xiicps_selftest.c
        drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/xiicps_sinit.c
        drm_audio_fw_bsp/microblaze_0/libsrc/iicps_v3_5/src/xiicps_slave.c
        drm_audio_fw_bsp/microblaze_0/libsrc/intc_v3_7/src/xintc.c
        drm_audio_fw_bsp/microblaze_0/libsrc/intc_v3_7/src/xintc.h
        drm_audio_fw_bsp/microblaze_0/libsrc/intc_v3_7/src/xintc_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/intc_v3_7/src/xintc_i.h
        drm_audio_fw_bsp/microblaze_0/libsrc/intc_v3_7/src/xintc_intr.c
        drm_audio_fw_bsp/microblaze_0/libsrc/intc_v3_7/src/xintc_l.c
        drm_audio_fw_bsp/microblaze_0/libsrc/intc_v3_7/src/xintc_l.h
        drm_audio_fw_bsp/microblaze_0/libsrc/intc_v3_7/src/xintc_options.c
        drm_audio_fw_bsp/microblaze_0/libsrc/intc_v3_7/src/xintc_selftest.c
        drm_audio_fw_bsp/microblaze_0/libsrc/PWM_v1_0/src/PWM.c
        drm_audio_fw_bsp/microblaze_0/libsrc/PWM_v1_0/src/PWM.h
        drm_audio_fw_bsp/microblaze_0/libsrc/PWM_v1_0/src/PWM_selftest.c
        drm_audio_fw_bsp/microblaze_0/libsrc/sdps_v3_3/src/xsdps.c
        drm_audio_fw_bsp/microblaze_0/libsrc/sdps_v3_3/src/xsdps.h
        drm_audio_fw_bsp/microblaze_0/libsrc/sdps_v3_3/src/xsdps_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/sdps_v3_3/src/xsdps_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/sdps_v3_3/src/xsdps_options.c
        drm_audio_fw_bsp/microblaze_0/libsrc/sdps_v3_3/src/xsdps_sinit.c
        drm_audio_fw_bsp/microblaze_0/libsrc/spips_v3_0/src/xspips.c
        drm_audio_fw_bsp/microblaze_0/libsrc/spips_v3_0/src/xspips.h
        drm_audio_fw_bsp/microblaze_0/libsrc/spips_v3_0/src/xspips_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/spips_v3_0/src/xspips_hw.c
        drm_audio_fw_bsp/microblaze_0/libsrc/spips_v3_0/src/xspips_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/spips_v3_0/src/xspips_options.c
        drm_audio_fw_bsp/microblaze_0/libsrc/spips_v3_0/src/xspips_selftest.c
        drm_audio_fw_bsp/microblaze_0/libsrc/spips_v3_0/src/xspips_sinit.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/profile/_profile_clean.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/profile/_profile_init.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/profile/_profile_timer_hw.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/profile/_profile_timer_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/profile/mblaze_nt_types.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/profile/profile.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/profile/profile_cg.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/profile/profile_config.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/profile/profile_hist.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/_exit.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/bspconfig.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/errno.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/fcntl.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/fsl.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/inbyte.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/mb_interface.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/microblaze_exception_handler.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/microblaze_exceptions_g.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/microblaze_exceptions_i.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/microblaze_interrupt_handler.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/microblaze_interrupts_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/microblaze_interrupts_i.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/microblaze_sleep.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/microblaze_sleep.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/outbyte.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/print.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/pvr.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/pvr.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/sleep.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xbasic_types.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xdebug.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xenv.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xenv_standalone.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_assert.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_assert.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_cache.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_cache.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_cache_vxworks.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_exception.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_exception.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_hal.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_io.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_io.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_macroback.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_mem.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_mem.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_misc_psreset_api.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_misc_psreset_api.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_printf.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_printf.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_testcache.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_testcache.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_testio.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_testio.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_testmem.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_testmem.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xil_types.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xplatform_info.c
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xplatform_info.h
        drm_audio_fw_bsp/microblaze_0/libsrc/standalone_v6_5/src/xstatus.h
        drm_audio_fw_bsp/microblaze_0/libsrc/uartps_v3_5/src/xuartps.c
        drm_audio_fw_bsp/microblaze_0/libsrc/uartps_v3_5/src/xuartps.h
        drm_audio_fw_bsp/microblaze_0/libsrc/uartps_v3_5/src/xuartps_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/uartps_v3_5/src/xuartps_hw.c
        drm_audio_fw_bsp/microblaze_0/libsrc/uartps_v3_5/src/xuartps_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/uartps_v3_5/src/xuartps_intr.c
        drm_audio_fw_bsp/microblaze_0/libsrc/uartps_v3_5/src/xuartps_options.c
        drm_audio_fw_bsp/microblaze_0/libsrc/uartps_v3_5/src/xuartps_selftest.c
        drm_audio_fw_bsp/microblaze_0/libsrc/uartps_v3_5/src/xuartps_sinit.c
        drm_audio_fw_bsp/microblaze_0/libsrc/usbps_v2_4/src/xusbps.c
        drm_audio_fw_bsp/microblaze_0/libsrc/usbps_v2_4/src/xusbps.h
        drm_audio_fw_bsp/microblaze_0/libsrc/usbps_v2_4/src/xusbps_endpoint.c
        drm_audio_fw_bsp/microblaze_0/libsrc/usbps_v2_4/src/xusbps_endpoint.h
        drm_audio_fw_bsp/microblaze_0/libsrc/usbps_v2_4/src/xusbps_g.c
        drm_audio_fw_bsp/microblaze_0/libsrc/usbps_v2_4/src/xusbps_hw.c
        drm_audio_fw_bsp/microblaze_0/libsrc/usbps_v2_4/src/xusbps_hw.h
        drm_audio_fw_bsp/microblaze_0/libsrc/usbps_v2_4/src/xusbps_intr.c
        drm_audio_fw_bsp/microblaze_0/libsrc/usbps_v2_4/src/xusbps_sinit.c
        miPod/src/main.c
        miPod/src/miPod.h
        test/drivers/PWM_v1_0/src/PWM.c
        test/drivers/PWM_v1_0/src/PWM.h
        test/drivers/PWM_v1_0/src/PWM_selftest.c
        test/ps7_init.c
        test/ps7_init.h
        test/ps7_init_gpl.c
        test/ps7_init_gpl.h)
